# die-agony

./: Cargo.toml  README.md
src/: board.rs  dice.rs  die.rs  direction.rs  main.rs  solver.rs
