[package]
name = "die-agony"
version = "0.1.0"
edition = "2021"
description = "This is a Rust solution to the _Die Agony_ puzzle, described in https://www.janestreet.com/puzzles/die-agony-index/."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
strum = "0.24"
strum_macros = "0.24"
